feat: translation script, dev env fix

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <title>Alzagro</title>
 </head>
 <body>
-    hello there 🍅
+    <header>
+        <h1>Alzagro</h1>
+        <ul>
+            <li>
+                <a id="home_link" href="#"></a>
+            </li>
+            <li>
+                <a id="features_link" href="#"></a>
+            </li>
+        </ul>
+    </header>
+
 </body>
 </html>
