--- a/index.html
+++ b/index.html
@@ -8,22 +8,37 @@
     <link rel="stylesheet" href="main.css">
     <title>Alzagro</title>
 </head>
-<body>
+<body id="home">
     <header>
         <h1>Alzagro</h1>
         <ul>
             <li>
-                <a id="home_link" href="#"></a>
+                <a id="home_link" href="#home"></a>
             </li>
             <li>
-                <a id="features_link" href="#"></a>
+                <a id="features_link" href="#features"></a>
+            </li>
+            <li>
+                <a id="why_link" href="#why"></a>
+            </li>
+            <li>
+                <a id="prices_link" href="#prices"></a>
+            </li>
+            <li>
+                <a id="team_link" href="#team"></a>
+            </li>
+            <li>
+                <a id="signup_link" href="#signup"></a>
+            </li>
+            <li>
+                <a id="language_button" href=""></a>
             </li>
         </ul>
     </header>
     <div class="screen main">
 
     </div>
-    <div class="screen features">
+    <div class="screen features" id="features">
         <div class="content">
             <h2>Features</h2>
         </div>
