feat: add ids to all links

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a id="team_link" href="#team"></a>
             </li>
             <li>
-                <a id="signup_link" href="#signup"></a>
+                <a id="signup_link" href="#sign-up"></a>
             </li>
             <li>
                 <a id="language_button" href=""></a>
@@ -43,7 +43,7 @@
             <h2>Features</h2>
         </div>
     </div>
-    <div class="screen why">
+    <div class="screen why" id="why">
         <div class="content">
             <h2>Why</h2>
         </div>
@@ -53,17 +53,17 @@
             <h2>Testimonials</h2>
         </div>
     </div>
-    <div class="screen prices">
+    <div class="screen prices" id="prices">
         <div class="content">
             <h2>Prices</h2>
         </div>
     </div>
-    <div class="screen sign-up">
+    <div class="screen sign-up" id="sign-up">
         <div class="content">
             <h2>Sign up</h2>
         </div>
     </div>
-    <div class="screen team">
+    <div class="screen team" id="team">
         <div class="content">
             <h2>Team</h2>
         </div>
