feat: add logo image to header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body id="home">
     <header>
-        <h1>Alzagro</h1>
+        <img src="./assets/logo@2x.png" class="logo-image"/>
         <ul>
             <li>
                 <a id="home_link" href="#home"></a>
