refactor: rename selector

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a id="team_link" href="#team"></a>
             </li>
         </ul>
-        <div class="button button-blue"><a id="signup_link" href="#sign-up"></a></div>
+        <div class="signup_button"><a id="signup_link" href="#sign-up"></a></div>
         <div class="language_button"><a id="language_button" href=""></a></div>
     </header>
     <div class="screen main">
