feat: features table with broken mobile view

--- a/index.html
+++ b/index.html
@@ -41,7 +41,31 @@
             <h2>FEATURES</h2>
             <h3 id="features_title1"></h3>
             <h3 id="features_title2"></h3>
-            <div class="features_content"></div>
+            <div class="features_content">
+                <div class="features_table">
+                    <div class="feature_container">
+                        <div class="features_icon accurate_icon"></div>
+                        <h4 id="features_accurate_header" class="features_header"></h4>
+                        <article id="features_article_accurate" class="features_article"></article>
+                    </div>
+                    <div class="feature_container">
+                        <div class="features_icon analytics_icon"></div>
+                        <h4 id="features_analytics_header" class="features_header"></h4>
+                        <article id="features_article_analytics" class="features_article"></article>
+                    </div>
+                    <div class="feature_container">
+                        <div class="features_icon infrared_icon"></div>
+                        <h4 id="features_infrared_header" class="features_header"></h4>
+                        <article id="features_article_infrared" class="features_article"></article>
+                    </div>
+                    <div class="feature_container">
+                        <div class="features_icon map_icon"></div>
+                        <h4 id="features_map_header" class="features_header"></h4>
+                        <article id="features_article_map" class="features_article"></article>
+                    </div>
+                </div>
+                <div class="features_image"></div>
+            </div>
             <h3 id="features_title3"></h3>
             <div class="features_content"></div>
         </div>
