feat: features work with broken mobile view

--- a/index.html
+++ b/index.html
@@ -67,7 +67,28 @@
                 <div class="features_image"></div>
             </div>
             <h3 id="features_title3"></h3>
-            <div class="features_content"></div>
+            <div class="features_content work_content">
+                <div class="work_container">
+                    <div class="work_icon easy_icon"></div>
+                    <h4 id="work_easy_header" class="work_header"></h4>
+                    <article id="work_article_easy" class="work_article"></article>
+                </div>
+                <div class="work_container">
+                    <div class="work_icon confirm_icon"></div>
+                    <h4 id="work_confirm_header" class="work_header"></h4>
+                    <article id="work_article_confirm" class="work_article"></article>
+                </div>
+                <div class="work_container">
+                    <div class="work_icon automatic_icon"></div>
+                    <h4 id="work_automatic_header" class="work_header"></h4>
+                    <article id="work_article_automatic" class="work_article"></article>
+                </div>
+                <div class="work_container">
+                    <div class="work_icon immediate_icon"></div>
+                    <h4 id="work_immediate_header" class="work_header"></h4>
+                    <article id="work_article_immediate" class="work_article"></article>
+                </div>
+            </div>
         </div>
     </div>
     <div class="screen why" id="why">
