feat: support layout

--- a/index.html
+++ b/index.html
@@ -94,8 +94,33 @@
     <div class="screen why" id="why">
         <div class="content">
             <h2>WHY CROPLER</h2>
-            <div class="features_content">
-                <div class="title_container">dwa</div>
+            <div class="why_content">
+                <div class="title_container">
+                    <h3 id="why_title" ></h3>
+                    <article id="why_article"></article>
+                    <div class="why_container">
+                        <div class="why_item">
+                            <div class="why_icon quality_icon"></div>
+                            <h4 id="why_quality_header" class="why_header"></h4>
+                            <article id="why_article_quality" class="why_description"></article>
+                        </div>
+                        <div class="why_item">
+                            <div class="why_icon seconds_icon"></div>
+                            <h4 id="why_seconds_header" class="why_header"></h4>
+                            <article id="why_article_seconds" class="why_description"></article>
+                        </div>
+                        <div class="why_item">
+                            <div class="why_icon support_icon"></div>
+                            <h4 id="why_support_header" class="why_header"></h4>
+                            <article id="why_article_support" class="why_description"></article>
+                        </div>
+                        <div class="why_item">
+                            <div class="why_icon better_icon"></div>
+                            <h4 id="why_better_header" class="why_header"></h4>
+                            <article id="why_article_better" class="why_description"></article>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
