feat: add remaining main screen titles

--- a/index.html
+++ b/index.html
@@ -35,8 +35,14 @@
     </header>
     <div class="screen main">
         <div class="main-container">
-            <div class="signup_button_main signup_button"><a id="signup_link2" href="#sign-up"></a></div>
-            <div class="features_button"><a id="features_link2" href="#features"></a></div>
+            <h2 id="alzagro_cropler"></h2>
+            <h3 id="main_title"></h3>
+            <h3 id="main_title2"></h3>
+            <p id="main_description"></p>
+            <div class="main-buttons">
+                <div class="signup_button_main signup_button"><a id="signup_link2" href="#sign-up"></a></div>
+                <div class="features_button"><a id="features_link2" href="#features"></a></div>
+            </div>
         </div>
     </div>
     <div class="screen features" id="features">
