feat: add testimonial screen text

--- a/index.html
+++ b/index.html
@@ -134,8 +134,14 @@
         </div>
     </div>
     <div class="screen testimonials">
-        <div class="content">
-            <h2>Testimonials</h2>
+        <div class="content testimonial-content">
+            <div class="testimonial_textbox">
+            <h2 id="testimonials_title"></h2>
+            <h3 id="testimonial_description"></h3>
+            <p id="testimonial_name"></p>
+            <p id="tesimonial_info"></p>
+        </div>
+        <div class="testimonial-image"></div>
         </div>
     </div>
     <div class="screen prices" id="prices">
