feat: prices without cards

--- a/index.html
+++ b/index.html
@@ -141,7 +141,39 @@
     <div class="screen prices" id="prices">
         <div class="content">
             <h2>Prices</h2>
-            <div class="title_container">dwa</div>
+            <div class="title_container">
+                <h3 id="prices_title"></h3>
+            </div>
+            <div class="prices_container">
+                <div class="why_item">
+                    <h4 id="prices_title1" class="prices_header"></h4>
+                    <article id="prices_description1" class="why_description"></article>
+                </div>
+                <div class="why_item">
+                    <h4 id="prices_title2" class="prices_header"></h4>
+                    <article id="prices_description2" class="why_description"></article>
+                </div>
+                <div class="why_item">
+                    <h4 id="prices_title3" class="prices_header"></h4>
+                    <article id="prices_description3" class="why_description"></article>
+                </div>
+                <div class="why_item">
+                    <h4 id="prices_title4" class="prices_header"></h4>
+                    <article id="prices_description4" class="why_description"></article>
+                </div>
+            </div>
+            <div class="card_container">
+                <div class="prices_card">
+                    <div class="card_header">
+
+                    </div>
+                    <div class="card_body">
+
+                    </div>
+                </div>
+                <div class="prices_card"></div>
+                <div class="prices_card"></div>
+            </div>
         </div>
     </div>
     <div class="screen sign-up" id="sign-up">
