--- a/index.html
+++ b/index.html
@@ -179,7 +179,18 @@
     <div class="screen sign-up" id="sign-up">
         <div class="content">
             <h2>Sign up</h2>
-            <div class="title_container">dwa</div>
+            <div class="title_container">
+                <h3 id="signup_title"></h3>
+                <article id="signup_description"></article>
+                <form action="">
+                    <input type="text" class="signup-input" placeholder="YOUR NAME">
+                    <input type="email" class="signup-input" placeholder="YOUR EMAIL">
+                    <select name="" id="" class="">
+                        <option value="dealer" id="option1"></option>
+                    </select>
+                    <button id="real-signup-button" class="signup_button real-signup"></button>
+                </form>
+            </div>
         </div>
     </div>
     <div class="screen team" id="team">
