feat: add links to footer

--- a/index.html
+++ b/index.html
@@ -204,7 +204,22 @@
         </div>
     </div>
     <footer>
-        footer
+        <div class="footer-column">
+            <p id="contacts"></p>
+        </div>
+        <div class="footer-column">
+            <p id="alzagro_footer"></p>
+            <a href="#" id=footer_home></a>
+            <a href="#" id=footer_features></a>
+            <a href="#" id=footer_why></a>
+            <a href="#" id=footer_prices></a>
+            <a href="#" id=footer_team></a>
+            <a href="#" id=footer_signup></a>
+        </div>
+        <div class="footer-column">
+            <p id="social"></p>
+        </div>
+    </div>
     </footer>
 </body>
 </html>
