feat: add destination to footer links

--- a/index.html
+++ b/index.html
@@ -209,12 +209,12 @@
         </div>
         <div class="footer-column">
             <p id="alzagro_footer"></p>
-            <a href="#" id=footer_home></a>
-            <a href="#" id=footer_features></a>
-            <a href="#" id=footer_why></a>
-            <a href="#" id=footer_prices></a>
-            <a href="#" id=footer_team></a>
-            <a href="#" id=footer_signup></a>
+            <a href="#home" id=footer_home></a>
+            <a href="#features" id=footer_features></a>
+            <a href="#why" id=footer_why></a>
+            <a href="#prices" id=footer_prices></a>
+            <a href="#team" id=footer_team></a>
+            <a href="#sign-up" id=footer_signup></a>
         </div>
         <div class="footer-column">
             <p id="social"></p>
