feat: add remaining footer elements

--- a/index.html
+++ b/index.html
@@ -206,6 +206,11 @@
     <footer>
         <div class="footer-column">
             <p id="contacts"></p>
+            <p id="address"></p>
+            <a href="mailto:info@alzagro.hu" id="email"></a>
+            <p id="phone"></p>
+            <p id="representer_title"></p>
+            <p id="representer"></p>
         </div>
         <div class="footer-column">
             <p id="alzagro_footer"></p>
