feat: add asset images to footer

--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@
         <div class="footer-column">
             <p id="social"></p>
         </div>
-    </div>
     </footer>
+    <img class="szechenyi" src="./assets/EUblokk@3x.png">
+    <img class="hiventures" src="./assets/LOGO_hiventures-15@3x.png">
 </body>
 </html>
