--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="48x48" href="./assets/favicon.ico">
     <script src="./main.js"></script>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" media='screen and (min-width: 200px) and (max-width: 400px)' href='mobile.css' />
