--- a/index.html
+++ b/index.html
@@ -200,8 +200,26 @@
     </div>
     <div class="screen team" id="team">
         <div class="content">
-            <h2>Team</h2>
-            <div class="title_container">dwa</div>
+            <h2 id="team_title"></h2>
+            <h3 id="team_subtitle"></h3>
+            <h2 id="team_description"></h2>
+            <div class="member-container">
+                <div class="team-member">
+                    <div class="member-photo"></div>
+                    <h3 id="member_name1"></h3>
+                    <h2 id="member_occupation1"></h2>
+                </div>
+                <div class="team-member">
+                    <div class="member-photo"></div>
+                    <h3 id="member_name2"></h3>
+                    <h2 id="member_occupation2"></h2>
+                </div>
+                <div class="team-member">
+                    <div class="member-photo"></div>
+                    <h3 id="member_name3"></h3>
+                    <h2 id="member_occupation3"></h2>
+                </div>
+            </div>
         </div>
     </div>
     <footer>
