style: add selectors for different font

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     </header>
     <div class="screen main">
         <div class="main-container">
-            <h2 id="alzagro_cropler"></h2>
-            <h3 id="main_title"></h3>
-            <h3 id="main_title2"></h3>
+            <h2 id="alzagro_cropler" class="font"></h2>
+            <h3 id="main_title" class="font"></h3>
+            <h3 id="main_title2" class="font"></h3>
             <p id="main_description"></p>
             <div class="main-buttons">
                 <div class="signup_button_main signup_button"><a id="signup_link2" href="#sign-up"></a></div>
@@ -48,9 +48,9 @@
     </div>
     <div class="screen features" id="features">
         <div class="content">
-            <h2>FEATURES</h2>
-            <h3 id="features_title1"></h3>
-            <h3 id="features_title2"></h3>
+            <h2 id="features_title_main" class="font"></h2>
+            <h3 id="features_title1" class="font"></h3>
+            <h3 id="features_title2" class="font"></h3>
             <div class="features_content">
                 <div class="features_table">
                     <div class="feature_container">
@@ -76,7 +76,7 @@
                 </div>
                 <div class="features_image"></div>
             </div>
-            <h3 id="features_title3"></h3>
+            <h3 id="features_title3" class="font"></h3>
             <div class="features_content work_content">
                 <div class="work_container">
                     <div class="work_icon easy_icon"></div>
@@ -103,10 +103,10 @@
     </div>
     <div class="screen why" id="why">
         <div class="content">
-            <h2>WHY CROPLER</h2>
+            <h2 id="why_title_main" class="font"></h2>
             <div class="why_content">
                 <div class="title_container">
-                    <h3 id="why_title" ></h3>
+                    <h3 id="why_title" class="font"></h3>
                     <article id="why_article"></article>
                 </div>
                 <div class="why_container">
@@ -136,7 +136,7 @@
     </div>
     <div class="screen testimonials">
             <div class="testimonial_textbox">
-                <h2 id="testimonials_title"></h2>
+                <h2 id="testimonials_title" class="font"></h2>
                 <h3 id="testimonial_description"></h3>
                 <p id="testimonial_name"></p>
                 <p id="tesimonial_info"></p>
@@ -145,9 +145,9 @@
     </div>
     <div class="screen prices" id="prices">
         <div class="content">
-            <h2>Prices</h2>
+            <h2 id="prices_title_main" class="font"></h2>
             <div class="title_container">
-                <h3 id="prices_title"></h3>
+                <h3 id="prices_title" class="font"></h3>
             </div>
             <div class="prices_container">
                 <div class="why_item">
@@ -183,9 +183,9 @@
     </div>
     <div class="screen sign-up" id="sign-up">
         <div class="content">
-            <h2>Sign up</h2>
+            <h2 id=signup_title2 class="font"></h2>
             <div class="title_container">
-                <h3 id="signup_title"></h3>
+                <h3 id="signup_title" class="font"></h3>
                 <article id="signup_description"></article>
             </div>
             <form action="">
@@ -194,29 +194,29 @@
                 <select name="" id="" class="">
                     <option value="dealer" id="option1"></option>
                 </select>
-                <button id="real-signup-button" class="signup_button real-signup"></button>
+                <button id="real-signup-button" class="signup_button real-signup font"></button>
             </form>
         </div>
     </div>
     <div class="screen team" id="team">
         <div class="content">
-            <h2 id="team_title"></h2>
-            <h3 id="team_subtitle"></h3>
+            <h2 id="team_title" class="font"></h2>
+            <h3 id="team_subtitle" class="font"></h3>
             <h2 id="team_description"></h2>
             <div class="member-container">
                 <div class="team-member">
                     <div class="member-photo"></div>
-                    <h3 id="member_name1"></h3>
+                    <h3 id="member_name1" class="font"></h3>
                     <h2 id="member_occupation1"></h2>
                 </div>
                 <div class="team-member">
                     <div class="member-photo"></div>
-                    <h3 id="member_name2"></h3>
+                    <h3 id="member_name2" class="font"></h3>
                     <h2 id="member_occupation2"></h2>
                 </div>
                 <div class="team-member">
                     <div class="member-photo"></div>
-                    <h3 id="member_name3"></h3>
+                    <h3 id="member_name3" class="font"></h3>
                     <h2 id="member_occupation3"></h2>
                 </div>
             </div>
@@ -224,7 +224,7 @@
     </div>
     <footer>
         <div class="footer-column">
-            <p id="contacts"></p>
+            <p id="contacts" class="font"></p>
             <p id="address"></p>
             <a href="mailto:info@alzagro.hu" id="email"></a>
             <p id="phone"></p>
@@ -232,7 +232,7 @@
             <p id="representer"></p>
         </div>
         <div class="footer-column">
-            <p id="alzagro_footer"></p>
+            <p id="alzagro_footer" class="font"></p>
             <a href="#home" id=footer_home></a>
             <a href="#features" id=footer_features></a>
             <a href="#why" id=footer_why></a>
@@ -241,7 +241,7 @@
             <a href="#sign-up" id=footer_signup></a>
         </div>
         <div class="footer-column">
-            <p id="social"></p>
+            <p id="social" class="font"></p>
         </div>
     </footer>
     <img class="szechenyi" src="./assets/EUblokk@3x.png">
