--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://db.onlinewebfonts.com/c/a082fd3df68a0b54e0d4d794bc38d268?family=Blender+Pro" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="48x48" href="./assets/favicon.ico">
     <script src="./main.js"></script>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" media='screen and (min-width: 200px) and (max-width: 800px)' href='mobile.css' />
     <title>Alzagro</title>
+
 </head>
 <body id="home">
     <header>
