--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="48x48" href="./assets/favicon.ico">
+    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
+    <script type="text/javascript">
+    (function(){
+        emailjs.init("user_5jRKuz68gO7igW4R6Lauq");
+    })();
+    </script>
     <script src="./main.js"></script>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" media='screen and (min-width: 200px) and (max-width: 800px)' href='mobile.css' />
@@ -188,7 +194,7 @@
                 <h3 id="signup_title"></h3>
                 <article id="signup_description"></article>
             </div>
-            <form action="">
+            <form action="false; loadSubscription">
                 <input type="text" class="signup-input" placeholder="YOUR NAME">
                 <input type="email" class="signup-input" placeholder="YOUR EMAIL">
                 <select name="" id="" class="">
