add language text to button

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </li>
         </ul>
         <div class="signup_button"><a id="signup_link" href="#sign-up"></a></div>
-        <div class="language_button"><a id="language_button" href=""></a></div>
+        <div class="language_button"><a id="language_button" href="">HU</a></div>
     </header>
     <div class="screen main">
         <div class="main-container">
