--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="icon" type="image/png" sizes="48x48" href="./assets/favicon.ico">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138952855-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-138952855-1');
+    </script>
     <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
     <script type="text/javascript">
     (function(){
@@ -13,6 +18,8 @@
     })();
     </script>
     <script src="./main.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="48x48" href="./assets/favicon.ico">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" media='screen and (min-width: 200px) and (max-width: 800px)' href='mobile.css' />
     <title>Alzagro</title>
