feat: cookie banner

--- a/index.html
+++ b/index.html
@@ -239,6 +239,11 @@
             </div>
         </div>
     </div>
+    <div class="banner">
+        <h4 id="banner-text" class="font"></h4>
+        <div class="read-more cookies-button"><a id="banner-read-more" class="banner-content" href="cookies/"></a></div>
+        <div class="accept cookies-button"><a id="banner-accept" class="banner-content"></a></div>
+    </div>
     <footer>
         <div class="footer-column">
             <p id="contacts" class="font"></p>
