--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <div class="banner">
         <h4 id="banner-text" class="font"></h4>
         <div class="read-more cookies-button"><a id="banner-read-more" class="banner-content" href="cookies/"></a></div>
-        <div class="accept cookies-button"><a id="banner-accept" class="banner-content"></a></div>
+        <div class="accept cookies-button" onclick="gimmeCookies()"><a id="banner-accept" class="banner-content"></a></div>
     </div>
     <footer>
         <div class="footer-column">
