--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <a id="why_link" href="#why"></a>
             </li>
             <li>
-                <!–– <a id="prices_link" href="#prices"></a> -->
-            </li>
+                <a id="prices_link" href="#prices"></a>
+            </li 
             <li>
                 <a id="team_link" href="#team"></a>
             </li>
