--- a/index.html
+++ b/index.html
@@ -206,7 +206,10 @@
                 <input type="text" class="signup-input" placeholder="YOUR NAME" required>
                 <input type="email" class="signup-input" placeholder="YOUR EMAIL" required>
                 <select name="" id="" class="">
-                    <option value="dealer" id="option1"></option>
+                    <option value="grain trader" id="option1"></option>
+                    <option value="farmer" id="option2"></option>
+                    <option value="grain mill representative" id="option3"></option>
+                    <option value="quality control company representative" id="option4"></option>
                 </select>
                 <button id="real-signup-button" class="signup_button real-signup font"></button>
             </form>
