--- a/index.html
+++ b/index.html
@@ -225,17 +225,17 @@
             <h2 id="team_description"></h2>
             <div class="member-container">
                 <div class="team-member">
-                    <div class="member-photo"></div>
+                    <div id="member-photo1" class="member-photo"></div>
                     <h3 id="member_name1" class="font"></h3>
                     <h2 id="member_occupation1"></h2>
                 </div>
                 <div class="team-member">
-                    <div class="member-photo"></div>
+                    <div id="member-photo2" class="member-photo"></div>
                     <h3 id="member_name2" class="font"></h3>
                     <h2 id="member_occupation2"></h2>
                 </div>
                 <div class="team-member">
-                    <div class="member-photo"></div>
+                    <div id="member-photo3" class="member-photo"></div>
                     <h3 id="member_name3" class="font"></h3>
                     <h2 id="member_occupation3"></h2>
                 </div>
