working mobile header

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 </head>
 <body id="home">
-    <header>
+    <header class="desktop-header">
         <img src="./assets/logo@2x.png" class="logo-image"/>
         <ul>
             <li>
@@ -48,6 +48,35 @@
         <div class="signup_button"><a id="signup_link" href="#sign-up"></a></div>
         <div class="language_button"><a id="language_button" href="">HU</a></div>
     </header>
+    <header class="mobile-header">
+        <div class="logo-wrapper">
+            <img src="./assets/mobile-logo.png" class="logo-image"/>
+            <h1 class="header-title font"><a href="#" class="font header-title-link">ALZAGRO</a></h1>
+        </div>
+        <div class="options-wrapper">
+            <div class="language_button"><a id="language_button" href="">HU</a></div>
+            <div class="hamburger">&#9776;</div>
+        </div>
+    </header>
+    <div class="menu-popup">
+        <ul class="popup-list hidden">
+            <li>
+                <a id="features_link3" href="#features"></a>
+            </li>
+            <li>
+                <a id="why_link2" href="#why"></a>
+            </li>
+            <li>
+                <a id="prices_link2" href="#prices"></a>
+            </li>
+            <li>
+                <a id="team_link2" href="#team"></a>
+            </li>
+            <li>
+                <a id="signup_link3" href="#sign-up"></a>
+            </li>
+        </ul>
+    </div>
     <div class="screen main">
         <div class="main-container">
             <h2 id="alzagro_cropler" class="font"></h2>
