language selection works

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </li>
         </ul>
         <div class="signup_button"><a id="signup_link" href="#sign-up"></a></div>
-        <div class="language_button"><a id="language_button" href="">HU</a></div>
+        <div class="language_button">EN</div>
     </header>
     <header class="mobile-header">
         <div class="logo-wrapper">
@@ -54,7 +54,7 @@
             <h1 class="header-title font"><a href="#" class="font header-title-link">ALZAGRO</a></h1>
         </div>
         <div class="options-wrapper">
-            <div class="language_button"><a id="language_button" href="">HU</a></div>
+            <div class="language_button">EN</div>
             <div class="hamburger">&#9776;</div>
         </div>
     </header>
@@ -75,6 +75,14 @@
             <li>
                 <a id="signup_link3" href="#sign-up"></a>
             </li>
+        </ul>
+    </div>
+    <div class="language-popup hidden">
+        <ul class="language-list">
+            <li class="lb">HU</li>
+            <li class="lb">EN</li>
+            <li class="lb">DE</li>
+            <li class="lb">IT</li>
         </ul>
     </div>
     <div class="screen main">
