--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             <li>
                 <a id="why_link" href="#why"></a>
             </li>
+             <li>
+                <a id="prices_link" href="#prices"></a>
+            </li>
             <li>
                 <a id="team_link" href="#team"></a>
             </li>
@@ -62,6 +65,9 @@
             </li>
             <li>
                 <a id="why_link2" href="#why"></a>
+            </li>
+             <li>
+                <a id="prices_link2" href="#prices"></a>
             </li>
             <li>
                 <a id="team_link2" href="#team"></a>
