Hiding prices title at the bottom

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <a href="#home" id=footer_home></a>
             <a href="#features" id=footer_features></a>
             <a href="#why" id=footer_why></a>
-            <a href="#prices" id=footer_prices></a>
+            <!--<a href="#prices" id=footer_prices></a>-->
             <a href="#team" id=footer_team></a>
             <a href="#sign-up" id=footer_signup></a>
         </div>
