--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <li>
                 <a id="why_link" href="#why"></a>
             </li>
-            <li>
-                
-            </li>
+             <!--<li>
+                <a id="prices_link" href="#prices"></a>
+            </li>-->
             <li>
                 <a id="team_link" href="#team"></a>
             </li>
