--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     </div>
     <div class="screen prices" id="prices">
         <div class="content">
-            <!--<h2 id="prices_title_main" class="font"></h2>-->
+           <h2 id="prices_title_main" class="font"></h2>
             <div class="title_container">
                 <h3 id="prices_title" class="font"></h3>
             </div>
