--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     </div>
     <div class="screen prices" id="prices">
         <div class="content">
-           <h2 id="prices_title_main" class="font"></h2>
+            <h2 id="prices_title_main" class="font"></h2>
             <div class="title_container">
                 <h3 id="prices_title" class="font"></h3>
             </div>
@@ -298,7 +298,7 @@
             <a href="#home" id=footer_home></a>
             <a href="#features" id=footer_features></a>
             <a href="#why" id=footer_why></a>
-            <!--<a href="#prices" id=footer_prices></a>-->
+            <a href="#prices" id=footer_prices></a>
             <a href="#team" id=footer_team></a>
             <a href="#sign-up" id=footer_signup></a>
         </div>
